Regression: Crash on COW delete of shared custom data #109583

Closed
opened 2023-07-01 14:09:11 +02:00 by Jens · 5 comments
First-time contributor

System Information
Operating system: Linux-5.4.0-153-generic-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.54.03
(Dualboot Windows:)
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-15 01:59, hash: b601ae87d064
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: d48939f103c0

Short description of error
Blender crashes when I pose bones (Rotate, Grab, Scale) of the armature in the attached .blend file.
This is a project I created before Blender 3.6.
I deleted everything from it but the objects that seem to be involved in the crash.

BLI_assert failed: F:\Blender_build\first\blender\source\blender\blenlib\BLI_implicit_sharing.hh:136, remove_user_and_delete_if_last(), at 'old_user_count >= 1'

Exact steps for others to reproduce the error

  1. Open the attached .blend file.
  2. Press 'R' and rotate the selected Bone (or do some other posing).
  3. Crash.

(Might need some tries)

**System Information** Operating system: Linux-5.4.0-153-generic-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.54.03 (Dualboot Windows:) Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-15 01:59, hash: `b601ae87d064` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: `d48939f103c0` **Short description of error** Blender crashes when I pose bones (Rotate, Grab, Scale) of the armature in the attached .blend file. This is a project I created before Blender 3.6. I deleted everything from it but the objects that seem to be involved in the crash. `BLI_assert failed: F:\Blender_build\first\blender\source\blender\blenlib\BLI_implicit_sharing.hh:136, remove_user_and_delete_if_last(), at 'old_user_count >= 1'` **Exact steps for others to reproduce the error** 1. Open the attached .blend file. 2. Press 'R' and rotate the selected Bone (or do some other posing). 3. Crash. (Might need some tries)
Jens added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-01 14:09:11 +02:00
Iliya Katueshenock changed title from Crash when posing armature to Regression: Crash when posing armature 2023-07-01 14:10:18 +02:00
Iliya Katueshenock changed title from Regression: Crash when posing armature to Regression: Crash on COW delete of shared custom data 2023-07-01 14:11:26 +02:00
Iliya Katueshenock added the
Interest
Core
Interest
Dependency Graph
Interest
Modeling
labels 2023-07-01 14:11:47 +02:00

I'll check

I'll check

Potentially caused by: 7eee378ecc or by baf6892270

Search problem: This is not a regression. Previously, this was a very long memory leak. But now it's a potential crash.

I will continue to revise this report to make the playback steps as simple as possible.

Potentially caused by: 7eee378eccc8f87e1330 or by baf68922700c7bb7d34a1329a5dd54072356faa2 Search problem: This is not a regression. Previously, this was a very long memory leak. But now it's a potential crash. I will continue to revise this report to make the playback steps as simple as possible.
Iliya Katueshenock added
Status
Confirmed
Module
Core
and removed
Status
Needs Triage
Interest
Core
labels 2023-07-01 14:53:13 +02:00
Author
First-time contributor

Wow, thank you for such quick response and investigation! :D <3

Wow, thank you for such quick response and investigation! :D <3
Iliya Katueshenock added this to the 3.6 LTS milestone 2023-07-01 15:01:19 +02:00
Iliya Katueshenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-07-01 15:09:07 +02:00

So far, I can see that this can be simplified down to an object with time dependent geometry and a bunch of attached hair objects. And also a lot of layers of custom data. But still can't reproduce from scratch. It seems that the problem is in the synchronization of the dependency graph.

So far, I can see that this can be simplified down to an object with time dependent geometry and a bunch of attached hair objects. And also a lot of layers of custom data. But still can't reproduce from scratch. It seems that the problem is in the synchronization of the dependency graph.
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-07-03 07:52:52 +02:00
Iliya Katueshenock self-assigned this 2023-07-03 17:24:56 +02:00
Iliya Katueshenock removed their assignment 2023-07-03 17:44:17 +02:00
Iliya Katueshenock added
Module
Nodes & Physics
Interest
Core
and removed
Module
Core
Interest
Nodes & Physics
labels 2023-07-03 20:24:58 +02:00
Iliya Katueshenock self-assigned this 2023-07-03 21:48:08 +02:00
Iliya Katueshenock removed the
Interest
Core
Interest
Dependency Graph
labels 2023-07-04 02:05:24 +02:00

Memory leak introduced between:
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-13 23:22, hash: rB3a3d9488a163
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-08 22:09, hash: rBe7a554e551e4

Memory leak introduced between: Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-13 23:22, hash: `rB3a3d9488a163` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-08 22:09, hash: `rBe7a554e551e4`
Hans Goudey was assigned by Iliya Katueshenock 2023-07-16 14:52:49 +02:00
Iliya Katueshenock removed their assignment 2023-07-16 14:52:52 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-26 17:04:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109583
No description provided.