source/blender/modifiers/intern/MOD_weighted_normal.cc
@@ -231,9 +231,9 @@ static void apply_weights_vertex_normal(WeightedNormalModifierData *wnmd,
                                  wn_data->face_normals,
                                  wn_data->sharp_edges.data(),
                                  wn_data->sharp_faces,
+                                 has_clnors ? clnors.data() : nullptr,
                                  true,
                                  split_angle,
-                                 has_clnors ? clnors.data() : nullptr,
                                  &lnors_spacearr,
                                  loop_normals);
 
@@ -362,9 +362,9 @@ static void apply_weights_vertex_normal(WeightedNormalModifierData *wnmd,
                                             face_normals,
                                             wn_data->sharp_edges.data(),
                                             wn_data->sharp_faces,
+                                            has_clnors ? clnors.data() : nullptr,
                                             true,
                                             split_angle,
-                                            has_clnors ? clnors.data() : nullptr,
                                             nullptr,
                                             loop_normals);
 
